Implementing advanced extension capabilities [WIP]
All of these changes were made when trying to adapt the Beartooth
project with the framework.  Many more changes yet to come.

--- a/tpl/self_shortcuts.twig
+++ b/tpl/self_shortcuts.twig
@@ -136,6 +136,7 @@
       <button id="{{ widget.full }}_font_down">smaller font</button>
       <button id="{{ widget.full }}_font_up">larger font</button>
     </span>
+    {% block shortcuts %}{% endblock %}
   </span>
 
 {% endblock widget %}
