--- a/tpl/widget.twig
+++ b/tpl/widget.twig
@@ -43,7 +43,8 @@
 {% block heading %}
   
   {% if show_heading and widget_heading %}
-    <div class="ui-widget-header ui-state-hover app-widget-header">{{ widget_heading|ucwords }}</div>
+    <div class="ui-widget-header ui-state-hover app-widget-header"
+         id="{{ widget.full }}_header">{{ widget_heading|ucwords }}</div>
   {% endif %}
 
 {% endblock heading %}
