--- a/tpl/main.twig
+++ b/tpl/main.twig
@@ -10,7 +10,7 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-  <title>{{ application_name }}</title>
+  <title>{{ constant('APPNAME') }}</title>
   <script type="text/javascript"></script>
   <link href="{{ constant('JQUERY_UI_URL') }}/css{{ jquery_ui_css_path }}" rel="stylesheet" />
   <link href="{{ constant('JQUERY_FULLCALENDAR_CSS_URL') }}" rel="stylesheet" />
@@ -26,25 +26,19 @@
       color: {{ BACKGROUND_COLOR }};
       background: {{ FOREGROUND_COLOR }};
     }
+    #main_slot {
+      margin-left: {{ show_menu ? 35 : 10 }}px;
+      margin-top: {{ show_status or show_shortcuts or show_settings ? 0 : 10 }}px;
+    }
+    #status_slot {
+      margin-left: {{ show_menu ? 35 : 10 }}px;
+    }
   </style>
 
-  <script type="text/javascript" src="{{ constant('JQUERY_JS_URL') }}"></script>
-  <script type="text/javascript" src="{{ constant('JQUERY_UI_JS_URL') }}"></script>
-  <script type="text/javascript" src="{{ constant('JQUERY_LAYOUT_JS_URL') }}"></script>
-  <script type="text/javascript" src="{{ constant('JQUERY_COOKIE_JS_URL') }}"></script>
-  <script type="text/javascript" src="{{ constant('JQUERY_HOVERINTENT_JS_URL') }}"></script>
-  <script type="text/javascript" src="{{ constant('JQUERY_METADATA_JS_URL') }}"></script>
-  <script type="text/javascript" src="{{ constant('JQUERY_FLIPTEXT_JS_URL') }}"></script>
-  <script type="text/javascript" src="{{ constant('JQUERY_EXTRUDER_JS_URL') }}"></script>
-  <script type="text/javascript" src="{{ constant('JQUERY_LOADING_JS_URL') }}"></script>
-  <script type="text/javascript" src="{{ constant('JQUERY_LOADING_OVERFLOW_JS_URL') }}"></script>
-  <script type="text/javascript" src="{{ constant('JQUERY_JEDITABLE_JS_URL') }}"></script>
-  <script type="text/javascript" src="{{ constant('JQUERY_TIMEPICKER_JS_URL') }}"></script>
-  <script type="text/javascript" src="{{ constant('JQUERY_RIGHTCLICK_JS_URL') }}"></script>
-  <script type="text/javascript" src="{{ constant('JQUERY_TOOLTIP_JS_URL') }}"></script>
-  <script type="text/javascript" src="{{ constant('JQUERY_FULLCALENDAR_JS_URL') }}"></script>
-  <script type="text/javascript" src="{{ constant('JQUERY_FONTSCALE_JS_URL') }}"></script>
-  <script type="text/javascript" src="{{ constant('JQUERY_TIMERS_JS_URL') }}"></script>
+  {# include all jquery libraries #}
+  {% for library in jquery_libraries %}
+    <script type="text/javascript" src="{{ library }}"></script>
+  {% endfor %}
   <script type="text/javascript" src="{{ constant('JS_URL') }}/main.js"></script>
 
   <script type="text/javascript">
@@ -65,43 +59,47 @@
         slot_load( "password", "self", "password" );
 
       {% endif %}
-
-      // setup the top extruder
-      $( "#top_extruder" ).buildMbExtruder( {
-        position: "top",
-        positionFixed: true,
-        width: 500,
-        sensibility: 500,
-        extruderOpacity: 1,
-        autoCloseTime: 0,
-        hidePanelsOnClose: true,
-        onExtOpen: function() {},
-        onExtContentLoad: function() {},
-        onExtClose: function() {}
-      } );
+      
+      {% if show_settings %}
+        // setup the top extruder
+        $( "#top_extruder" ).buildMbExtruder( {
+          position: "top",
+          positionFixed: true,
+          width: 500,
+          sensibility: 500,
+          extruderOpacity: 1,
+          autoCloseTime: 0,
+          hidePanelsOnClose: true,
+          onExtOpen: function() {},
+          onExtContentLoad: function() {},
+          onExtClose: function() {}
+        } );
+      {% endif %}
     
-      // setup the left extruder
-      $( "#left_extruder" ).buildMbExtruder( {
-        position: "left",
-        positionFixed: true,
-        width: 240,
-        sensibility: 500,
-        extruderOpacity: 1,
-        autoCloseTime: 0,
-        hidePanelsOnClose: true,
-        onExtOpen: function() {},
-        onExtContentLoad: function() {},
-        onExtClose: function() {}
-      } );
+      {% if show_menu %}
+        // setup the left extruder
+        $( "#left_extruder" ).buildMbExtruder( {
+          position: "left",
+          positionFixed: true,
+          width: 240,
+          sensibility: 500,
+          extruderOpacity: 1,
+          autoCloseTime: 0,
+          hidePanelsOnClose: true,
+          onExtOpen: function() {},
+          onExtContentLoad: function() {},
+          onExtClose: function() {}
+        } );
+      {% endif %}
 
       loading_image = new Image();
       loading_image.src = "{{ constant('CENOZO_URL') }}/img/loading.gif";
 
       // refresh all slots
-      slot_refresh( "status" );
-      slot_refresh( "shortcuts" );
-      slot_refresh( "settings" );
-      slot_refresh( "menu" );
+      {% if show_status %}slot_refresh( "status" );{% endif %}
+      {% if show_shortcuts %}slot_refresh( "shortcuts" );{% endif %}
+      {% if show_settings %}slot_refresh( "settings" );{% endif %}
+      {% if show_menu %}slot_refresh( "menu" );{% endif %}
       slot_refresh( "main" );
 
       // apply jquery-ui theme to the extruders
@@ -117,22 +115,24 @@
   <div id="error_slot"></div>
   <div id="confirm_slot"></div>
   <div id="note_slot"></div>
-  <div id="timer_slot"></div>
-  <div id="dialing_pad_slot"></div>
   <div id="calculator_slot"></div>
   <div id="timezone_calculator_slot"></div>
   <div id="password_slot"></div>
-  <div id="top_extruder" class="{title:'settings'}">
-    <div id="settings_slot"></div>
-  </div>
-  <div id="left_extruder" class="{title:'menu'}">
-    <div id="menu_slot"></div>
-  </div>
+  {% if show_settings %}
+    <div id="top_extruder" class="{title:'settings'}">
+      <div id="settings_slot"></div>
+    </div>
+  {% endif %}
+  {% if show_menu %}
+    <div id="left_extruder" class="{title:'menu'}">
+      <div id="menu_slot"></div>
+    </div>
+  {% endif %}
   <div class="ui-widget-content" id="app_ui">
     <table>
       <tr>
-        <td><div id="status_slot"></div></td>
-        <td><div id="shortcuts_slot"></div></td>
+        <td>{% if show_status %}<div id="status_slot"></div>{% endif %}</td>
+        <td>{% if show_shortcuts %}<div id="shortcuts_slot"></div>{% endif %}</td>
       </tr>
     </table>
     <div id="main_slot"></div>
