--- a/tpl/self_home.twig
+++ b/tpl/self_home.twig
@@ -10,7 +10,7 @@
 {% block widget %}
 
   <div class="ui-widget ui-widget-content app-widget-content">
-    <div class="title" style="padding-top: 10px;">Welcome to Cenozo version {{ version }}</div>
+    <div class="title" style="padding-top: 10px;">{{ title }}</div>
     <div class="spacer"></div>
     <div>
       You are currently logged on as <span class="title">{{ user_name }}</span>
