Adding in a loading icon

--- a/tpl/main.twig
+++ b/tpl/main.twig
@@ -42,6 +42,9 @@
   <script type="text/javascript" src="{{ constant('JS_URL') }}/main.js"></script>
 
   <script type="text/javascript">
+    // define where the loading icon is
+    window.loading_icon_url = "{{ constant('CENOZO_URL') }}/img/loading.gif";
+
     $( function() {
       
       {% if reset_password %}
