--- a/tpl/self_settings.twig
+++ b/tpl/self_settings.twig
@@ -74,7 +74,7 @@
         </td>
       {% endif %}
       <td align="left" valign="top" class="title">
-        Cenozo version {{ version }}<br>
+        {{ constant( 'APPNAME' )|ucwords }} version {{ version }}<br>
         Logged in as {{ user }}<br>
         {% if development %}
           <div class="ui-state-error" style="margin-top:4px;padding:2px">development mode</div>
