0000248: Top align text with headings
Column headers now align the same as content in the list UI component.

--- a/tpl/base_list.twig
+++ b/tpl/base_list.twig
@@ -404,7 +404,8 @@
         {% endif %}
         {% for column_id, column in columns %}
           {% if column.sortable|default(false) %}
-            <th id="{{ column_id }}" style="vertical-align:top;">
+            <th id="{{ column_id }}" style="vertical-align:top;"
+                {% if column.align|default(false) %}align="{{ column.align }}"{% endif %}>
               <button class="{{ widget.full }}_sortable
                 {% if column.restrictable|default(false) %}
                   {{ widget.full }}_restrictable
