Capitolized title and added a web icon link

--- a/tpl/main.twig
+++ b/tpl/main.twig
@@ -10,7 +10,8 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-  <title>{{ constant('APPNAME') }}</title>
+  <title>{{ constant('APPNAME')|ucwords }}</title>
+  <link rel="shortcut icon" href="favicon.ico" />
   <script type="text/javascript"></script>
   <link href="{{ constant('JQUERY_UI_URL') }}/css{{ jquery_ui_css_path }}" rel="stylesheet" />
   <link href="{{ constant('JQUERY_FULLCALENDAR_CSS_URL') }}" rel="stylesheet" />
