--- a/tpl/self_menu.twig
+++ b/tpl/self_menu.twig
@@ -35,6 +35,7 @@
             ajax_pull( "{{ item.subject }}", "{{ item.name }}" );
           {% elseif 'push' == item.type %}
             ajax_push( "{{ item.subject }}", "{{ item.name }}" );
+            window.location.reload();
           {% endif %}
         } );
       {% endfor %}
