Adding missing reload() calls in self menu template

--- a/tpl/self_menu.twig
+++ b/tpl/self_menu.twig
@@ -48,6 +48,7 @@
             ajax_pull( "{{ item.subject }}", "{{ item.name }}" );
           {% elseif 'push' == item.type %}
             ajax_push( "{{ item.subject }}", "{{ item.name }}" );
+            window.location.reload();
           {% endif %}
         } );
       {% endfor %}
@@ -60,6 +61,7 @@
             ajax_pull( "{{ item.subject }}", "{{ item.name }}" );
           {% elseif 'push' == item.type %}
             ajax_push( "{{ item.subject }}", "{{ item.name }}" );
+            window.location.reload();
           {% endif %}
         } );
       {% endfor %}
@@ -72,6 +74,7 @@
             ajax_pull( "{{ item.subject }}", "{{ item.name }}" );
           {% elseif 'push' == item.type %}
             ajax_push( "{{ item.subject }}", "{{ item.name }}" );
+            window.location.reload();
           {% endif %}
         } );
       {% endfor %}
