--- a/web/css/main.css
+++ b/web/css/main.css
@@ -202,6 +202,31 @@ textarea {
   opacity: 0.35;
 }
 
+.opaque {
+  z-index: 1000000;
+  background-color: black;
+  filter: alpha(opacity=30);
+  opacity: 0.3;
+  height:100%;
+  width:100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+
+#loading {
+  display: none;
+  margin-top: -33px;
+  margin-left: -33px;
+  padding: 0px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: auto;
+}
+
 span.status_icons {
   display: inline-block;
   position: relative;
