0000310: Another Note Comes Up

--- a/tpl/base_view.twig
+++ b/tpl/base_view.twig
@@ -174,9 +174,8 @@
                   } );
                 
                   // open the dialog when the text is clicked
-                  $( "div.editable_text" ).click( function () {
-                    $( "#{{ widget.full }}_dialog_{{ id|default(0) }}__{{ item_id }}" )
-                      .dialog( "open" );
+                  $( "#{{ widget.full }}__{{ item_id }}" ).click( function () {
+                    $( "#{{ widget.full }}_dialog_{{ id|default(0) }}__{{ item_id }}" ).dialog( "open" );
                   } );
                 } );
               </script>
