--- a/tpl/base_view.twig
+++ b/tpl/base_view.twig
@@ -375,7 +375,7 @@
           </td>
         </tr>
         {% if not loop.last %}
-          <tr><td></td><td><hr class="ui-widget ui-widget-content"</td></tr>
+          <tr><td></td><td><hr class="ui-widget ui-widget-content" /></td></tr>
         {% endif %}
       {% endif %}
     {% endfor %}
