--- a/tpl/user_view.twig
+++ b/tpl/user_view.twig
@@ -10,22 +10,16 @@
 {% block javascript %}
   
   {{ parent() }}
-  {% if reset_password or set_password %}
+  {% if reset_password|default(false) %}
     <script type="text/javascript">
-      $( function() {
-        {% if reset_password %}
-          $( "#{{ widget.full }}__reset_password" ).click( function() {
-            confirm_dialog(
-              "Reset Password",
-              "Are you sure you wish to reset this user's password?",
-              function() { ajax_push( 'user', 'reset_password', { "id": {{ id }} } ); }
-            );
-          } );
-        {% endif %}
-        
-        {% if set_password %}
-          // TODO: implement set-password
-        {% endif %}
+      $( function () {
+        $( "#{{ widget.full }}__reset_password" ).click( function() {
+          confirm_dialog(
+            "Reset Password",
+            "Are you sure you wish to reset this user's password?",
+            function() { ajax_push( 'user', 'reset_password', { "id": {{ id }} } ); }
+          );
+        } );
       } );
     </script>
   {% endif %}
@@ -37,17 +31,6 @@
 
   {{ parent() }}
   {% from 'macros.twig' import include_list %}
-  {% if reset_password or set_password %}
-    <div class="spacer">
-      {% if reset_password %}
-        <button id="{{ widget.full }}__reset_password">Reset Password</button>
-      {% endif %}
-      {% if set_password %}
-        <button id="{{ widget.full }}__set_password">Set Password</button>
-      {% endif %}
-    </div>
-    <div id="{{ widget.full }}_slot" />
-  {% endif %}
   {{ include_list( 'access', access_list|default(false), true ) }}
   {{ include_list( 'activity', activity_list|default(false), true ) }}
 
