--- a/tpl/site_restricted_list.twig
+++ b/tpl/site_restricted_list.twig
@@ -25,27 +25,21 @@
 
 {% endblock javascript %}
 
-{% block widget %}
+{% block prelist %}
 
   {% if sites is defined %}
-    <div style="padding-top: 4px; padding-bottom: 4px;">
-      {% block prelist %}
-        <span class="spacer">
-          {% set restrict_site_id = restrict_site_id|default(0) %}
-          Restrict to site:
-          <select id="{{ widget.full }}__restrict_site" class="ui-state-default">
-            <option {% if 0 == restrict_site_id %}selected{% endif %}
-                    value="0">All Sites</option>
-            {% for id, name in sites %}
-              <option {% if id == restrict_site_id %}selected{% endif %}
-                      value="{{ id }}">{{ name }}</option>
-            {% endfor %}
-          </select>
-        </span>
-      {% endblock prelist %}
-    </div>
+    {% set restrict_site_id = restrict_site_id|default(0) %}
+    <label for="{{ widget.full }}__restrict_site">Restrict to site:</label>
+    <select id="{{ widget.full }}__restrict_site" class="ui-state-default"
+            style="margin-top:4px;margin-bottom:4px;">
+      <option {% if 0 == restrict_site_id %}selected{% endif %}
+              value="0">All Sites</option>
+      {% for id, name in sites %}
+        <option {% if id == restrict_site_id %}selected{% endif %}
+                value="{{ id }}">{{ name }}</option>
+      {% endfor %}
+    </select>
   {% endif %}
-
   {{ parent() }}
 
-{% endblock widget %}
+{% endblock prelist %}
