--- a/web/css/main.css
+++ b/web/css/main.css
@@ -25,21 +25,15 @@ html, body {
   padding: 0 5px 5px 5px;
   height: 20px;
   width: 180px;
-  -moz-border-radius: 0 0 10px 10px;
-  -webkit-border-bottom-left-radius: 10px;
-  -webkit-border-bottom-right-radius: 10px;
-  -moz-box-shadow: black 2px 2px 5px;
-  -webkit-box-shadow: black 2px 2px 5px;
+  border-radius: 0 0 10px 10px;
+  box-shadow: black 2px 2px 5px;
   cursor: pointer;
 }
 
 .extruder.top .content {
   display: none;
-  -moz-border-radius: 0 0 4px 4px;
-  -webkit-border-bottom-left-radius: 4px;
-  -webkit-border-bottom-right-radius: 4px;
-  -moz-box-shadow: black 2px 2px 5px;
-  -webkit-box-shadow: black 2px 2px 5px;
+  border-radius: 0 0 4px 4px;
+  box-shadow: black 2px 2px 5px;
 }
 
 .extruder.top .text {
@@ -67,18 +61,14 @@ html, body {
   position: absolute;
   top: 0;
   right: 0;
-  -moz-border-radius: 0 10px 10px 0;
-  -webkit-border-top-right-radius: 10px;
-  -webkit-border-bottom-right-radius: 10px;
-  -moz-box-shadow: black 2px 2px 5px;
-  -webkit-box-shadow: black 2px 2px 5px;
+  border-radius: 0 10px 10px 0;
+  box-shadow: black 2px 2px 5px;
   cursor: pointer;
 }
 
 .extruder.left .content {
   display: none;
-  -moz-box-shadow: black 2px 0px 5px;
-  -webkit-box-shadow: black 2px 0px 5px;
+  box-shadow: black 2px 0px 5px;
 }
 
 .extruder.left .text {
@@ -91,11 +81,8 @@ html, body {
   z-index: 3000;
   padding: 5px;
   opacity: 1.0;
-  -moz-border-radius: 5px;
-  -webkit-border-top-right-radius: 5px;
-  -webkit-border-bottom-right-radius: 5px;
-  -moz-box-shadow: black 2px 2px 5px;
-  -webkit-box-shadow: black 2px 2px 5px;
+  border-radius: 5px;
+  box-shadow: black 2px 2px 5px;
 }
 
 #tooltip h3, #tooltip div {
