0000384: Calendar month persistance

--- a/tpl/base_calendar.twig
+++ b/tpl/base_calendar.twig
@@ -47,7 +47,11 @@
           modal: false,
           width: 800,
           height: 600,
-          close: function( event, ui ) { slot_refresh( {{ slot }} ); }
+          close: function( event, ui ) {
+            console.log( 'close event' );
+            $( "#{{ widget.full }}_calendar" ).fullCalendar( 'refetchEvents' );
+            $( "#{{ widget.full }}_calendar" ).fullCalendar( 'rerenderEvents' );
+          }
         } );
       {% endif %}
     });
