--- a/tpl/base_list.twig
+++ b/tpl/base_list.twig
@@ -259,7 +259,8 @@
       $header_buttons_unrestrictable.rightClick( function( event ) {
         error_dialog(
           "Error",
-          "<p>This column cannot be restricted.</p>"
+          "<p>This column cannot be restricted.</p>",
+          true
         );
       } );
       
