--- a/tpl/base_list.twig
+++ b/tpl/base_list.twig
@@ -216,21 +216,29 @@
     
       // left-clicking a header button sorts by that column
       $header_buttons.click( function() {
-        var sort_column = $(this).parent( "th" ).attr("id");
-        var args = new Object();
-        {% if parent.exists %}
-          {% if parent.id|default(false) %}
-            args.{{ parent.full }} = { "id": {{ parent.id }} };
-          {% endif %}
-          args.{{ widget.full }} = {
-            "sort_column": sort_column,
-            "sort_desc": "{{ sort_column }}" == sort_column ? {{ sort_desc ? 0 : 1 }} : 0
-          };
-          slot_load( {{ slot }}, "{{ parent.subject }}", "{{ parent.name }}", args, true );
+        {% if disable_sorting|default( false ) %}
+          error_dialog(
+            "Notice",
+            "<p>This list cannot be sorted.  Try right-clicking on a column's header to " +
+            "restrict the list instead.</p>"
+          );
         {% else %}
-          args.sort_column = sort_column;
-          args.sort_desc = "{{ sort_column }}" == sort_column ? {{ sort_desc ? 0 : 1 }} : 0;
-          slot_load( {{ slot }}, "{{ widget.subject }}", "{{ widget.name }}", args );
+          var sort_column = $(this).parent( "th" ).attr("id");
+          var args = new Object();
+          {% if parent.exists %}
+            {% if parent.id|default(false) %}
+              args.{{ parent.full }} = { "id": {{ parent.id }} };
+            {% endif %}
+            args.{{ widget.full }} = {
+              "sort_column": sort_column,
+              "sort_desc": "{{ sort_column }}" == sort_column ? {{ sort_desc ? 0 : 1 }} : 0
+            };
+            slot_load( {{ slot }}, "{{ parent.subject }}", "{{ parent.name }}", args, true );
+          {% else %}
+            args.sort_column = sort_column;
+            args.sort_desc = "{{ sort_column }}" == sort_column ? {{ sort_desc ? 0 : 1 }} : 0;
+            slot_load( {{ slot }}, "{{ widget.subject }}", "{{ widget.name }}", args );
+          {% endif %}
         {% endif %}
       } );
 
