--- a/tpl/base_view.twig
+++ b/tpl/base_view.twig
@@ -83,7 +83,7 @@
         var columns = new Object();
         
         // when changing start_time, also adjust end_time
-        if( 'time' == type && 'start_time' == column_name ) {
+        if( ( 'time' == type || 'timesec' == type ) && 'start_time' == column_name ) {
           // determine the time difference between the old and new time
           end_time_obj =
             new Date( "Jan 2, 2000 " + $( "#old_" + widget_full + "__end_time" ).val() );
@@ -94,6 +94,12 @@
           var hours = ( end_time_obj.getHours() < 10 ? '0' : '' ) + end_time_obj.getHours();
           var minutes = ( end_time_obj.getMinutes() < 10 ? '0' : '' ) + end_time_obj.getMinutes();
           columns.end_time = hours + ":" + minutes;
+
+          // add seconds for timesec types
+          if( 'timesec' == type ) {
+            var seconds = ( end_time_obj.getSeconds() < 10 ? '0' : '' ) + end_time_obj.getSeconds();
+            columns.end_time = columns.end_time + ":" + seconds;
+          }
         }
       
         // make sure to change empty strings for boolean and enum values to NULL
@@ -107,7 +113,7 @@
         // push the changed data, updating the hidden "old" input upon success
         if( ajax_push( widget_subject, "edit", args ) ) {
           // if we are setting start_time, then update end_time
-          if( 'time' == type && 'start_time' == column_name ) {
+          if( ( 'time' == type || 'timesec' == type ) && 'start_time' == column_name ) {
             $( "#old_" + widget_full + "__end_time" ).val( columns.end_time );
             $( "#" + widget_full + "__end_time" ).val( columns.end_time );
           }
@@ -274,14 +280,20 @@
                       return data[index];
                     }, jeditable_params );
                   
-                  {% elseif 'datetime' == entry.type %}
+                  {% elseif 'datetime' == entry.type or 'datetimesec' == entry.type %}
                 
                     $input_{{ item_id }} = $( "input.datetimepicker_{{ item_id }}" );
                     $input_{{ item_id }}.datetimepicker( {
                       dateFormat: 'yy-mm-dd',
-                      timeFormat: 'hh:mm',
+                      timeFormat: {{ 'datetime' == entry.type ? '"hh:mm"' : '"hh:mm:ss"' }},
                       ampm: false,
-                      stepMinute: 5,
+                      {% if 'datetime' == entry.type %}
+                        stepMinute: 5,
+                      {% else %}
+                        showSecond: true,
+                        stepMinute: 1,
+                        stepSecond: 1,
+                      {% endif %}
                       showAnim: 'slideDown',
                       onClose: function( dateText, inst ) {
                         return process_change(
@@ -309,14 +321,20 @@
                       }
                     } );
                   
-                  {% elseif 'time' == entry.type %}
+                  {% elseif 'time' == entry.type or 'timesec' == entry.type %}
           
                     $input_{{ item_id }} = $( "input.timepicker_{{ item_id }}" );
                     $input_{{ item_id }}.timepicker( {
-                      timeFormat: 'hh:mm',
-                      showAnim: 'slideDown',
+                      timeFormat: {{ 'time' == entry.type ? '"hh:mm"' : '"hh:mm:ss"' }},
+                      showAnim: "slideDown",
                       ampm: false,
-                      stepMinute: 5,
+                      {% if 'time' == entry.type %}
+                        stepMinute: 5,
+                      {% else %}
+                        showSecond: true,
+                        stepMinute: 1,
+                        stepSecond: 1,
+                      {% endif %}
                       onClose: function( timeText, date_inst, time_inst ) {
                         return process_change(
                           "{{ widget.subject }}",
@@ -339,7 +357,7 @@
                 <div id="{{ widget.full }}__{{ item_id }}"
                      class="mutable padded jeditable_{{ item_id }}">{{ entry_value }}</div>
         
-              {% elseif 'datetime' == entry.type %}
+              {% elseif 'datetime' == entry.type or 'datetimesec' == entry.type %}
       
                 <div class="mutable padded">
                   <input id="{{ widget.full }}__{{ item_id }}" type="text"
@@ -357,7 +375,7 @@
                          style="border: 0px; background: transparent; width: 100%;" readonly />
                 </div>
       
-              {% elseif 'time' == entry.type %}
+              {% elseif 'time' == entry.type or 'timesec' == entry.type %}
       
                 <div class="mutable padded">
                   <input id="{{ widget.full }}__{{ item_id }}" type="text"
