Changes and bug fixes related to implementing Sabretooth MC

--- a/tpl/activity_chart.twig
+++ b/tpl/activity_chart.twig
@@ -7,7 +7,7 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-  <title>{{ constant('APPNAME')|ucwords }}</title>
+  <title>{{ service_title }}</title>
   <script type="text/javascript" src="https://www.google.com/jsapi"></script>
   <script type="text/javascript">
     google.load( "visualization", "1", {packages:["corechart"]} );
