Adding site list to service view widget

--- a/tpl/service_view.twig
+++ b/tpl/service_view.twig
@@ -13,5 +13,6 @@
   {% from 'macros.twig' import include_list %}
   {{ include_list( 'cohort', cohort_list|default(false), true ) }}
   {{ include_list( 'role', role_list|default(false), true ) }}
+  {{ include_list( 'site', site_list|default(false), true ) }}
 
 {% endblock record %}
